Switch to fork of cookie-rs.
Conflicts:
	Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ license = "MIT"
 authors = ["Sean McArthur <sean.monstar@gmail.com>",
            "Jonathan Reem <jonathan.reem@gmail.com>"]
 
+[dependencies.cookie]
+git = "https://github.com/servo/cookie-rs"
+branch = "lenientparse_backport"
+
 [dependencies]
 cookie = "*"
 log = "*"
